<resources>
    <string name="app_name">Big Follow</string>

    <!-- Main activity -->

    <!--[START Google Sign In strings]-->
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <!--[END Google Sign In strings]-->

    <!-- Project List activity -->
    <string name="projects">Projects</string>

    <!-- Action List activity -->
    <string name="actions">Actions</string>
    <string name="project_action_list">Liste des actions projet</string>

    <!-- Project Action List activity -->

    <string name="update_data">Mettre à jour</string>
    <string name="action">Action</string>
    <string name="type">Type</string>
    <string name="order">Ordre</string>
    <string name="price">Tarif</string>
    <string name="domain">Domaine</string>
    <string name="step">Etape</string>
    <string name="is_displayed">Doit apparaitre sur\nle planning ?</string>
    <string name="invoicing_type">Facturé TP, FO\nou remise</string>
    <string name="days_count">Nb jours\nprévus</string>
    <string name="start_at">Date\ndébut</string>
    <string name="end_at">Date\nfin</string>
    <string name="cost_by_day">Coût par\njour</string>
    <string name="project_manager">Resp\nOEU</string>
    <string name="product_owner">Resp\nOUV</string>
    <string name="product_user">Utilisateur\nOUV</string>
    <string name="last_update_date_label">Dernière mise à jour : </string>
    <string name="never">Jamais</string>
    <string name="no_step">Aucun</string>
    <string name="tp">TP</string>
    <string name="fo">FO</string>
    <string name="calling_google_sheets_api">Calling Google Sheets API...</string>
    <string name="error_gps_not_installed">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app."</string>
    <string name="error_no_network">No network connection available.</string>
    <string name="error_occured">The following error occurred:\n</string>
    <string name="info_access_to_google_account_needed">This app needs to access your Google account (via Contacts).</string>
    <string name="info_no_results_returned">No results returned.</string>
    <string name="info_data_retrieved">Data retrieved using the Google Sheets API</string>
    <string name="info_request_cancelled">Request cancelled</string>
    <string name="title_activity_action_list">ActionListActivity</string>

</resources>
